--- a/base.css
+++ b/base.css
@@ -1,9 +1,51 @@
 body{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
   /* align-items: center; centralizar*/ 
-  background-color: lightslategray;
+  background-color: #ddf3f5;
+  font-family: sans-serif;
 }
 
+.main-color{
+  color: #e36387;
+}
 
+.div{
+  align-self: center;
+  margin-bottom: 5rem;
+  display: flex;
+  width: 80%;
+}
 
+.chart{
+  float:left;
+}
+
+.info{
+  float:right;
+  width: 100%;
+  text-align: center;
+}
+
+footer{
+  background-color: #e36387;
+  margin: 0;
+  width: 100%;
+  padding: 1rem 0rem;
+  text-align: center;
+  font-weight: 600;
+  margin-top: auto;
+  
+}
+body {
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
+}
+
+.name{
+  color:rgb(255, 255, 255);
+  text-decoration: none;
+}
